{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "802ae1e9-8972-4e85-9c4c-cd332c54633c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2d3d0500-0eab-46e7-8f83-df63ccee2bbf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0ed64a60-3036-462a-87cf-8a4d600fc703",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "430bfc36-3213-4b13-b42a-b2738ebb4ec5",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cac05222-91c6-4e32-abaf-7d54a57c61af",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}